// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing snapshot with Missions testing Mission component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <section
          class="navbar"
        >
          <div
            class="left-side"
          >
            <img
              alt="logo"
              class="logo-img"
              src="planet.png"
            />
            <h2
              class="nav-header"
            >
              Space Travelers' Hub
            </h2>
          </div>
          <div
            class="right-side"
          >
            <ul
              class="nav-links"
            >
              <li>
                <a
                  aria-current="page"
                  class="active"
                  href="/"
                >
                  Rockets
                </a>
              </li>
              <li
                class="boundary"
              >
                <a
                  class=""
                  href="/missions"
                >
                  Missions
                </a>
              </li>
              <li>
                <a
                  class=""
                  href="/profile"
                >
                  My Profile
                </a>
              </li>
            </ul>
          </div>
        </section>
        <table>
          <thead>
            <tr>
              <th>
                Mission
              </th>
              <th>
                Description
              </th>
              <th>
                Status
              </th>
              <th>
                 
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="loader"
            >
              <td>
                <p>
                  Loading...
                </p>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <section
        class="navbar"
      >
        <div
          class="left-side"
        >
          <img
            alt="logo"
            class="logo-img"
            src="planet.png"
          />
          <h2
            class="nav-header"
          >
            Space Travelers' Hub
          </h2>
        </div>
        <div
          class="right-side"
        >
          <ul
            class="nav-links"
          >
            <li>
              <a
                aria-current="page"
                class="active"
                href="/"
              >
                Rockets
              </a>
            </li>
            <li
              class="boundary"
            >
              <a
                class=""
                href="/missions"
              >
                Missions
              </a>
            </li>
            <li>
              <a
                class=""
                href="/profile"
              >
                My Profile
              </a>
            </li>
          </ul>
        </div>
      </section>
      <table>
        <thead>
          <tr>
            <th>
              Mission
            </th>
            <th>
              Description
            </th>
            <th>
              Status
            </th>
            <th>
               
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="loader"
          >
            <td>
              <p>
                Loading...
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing snapshot with Missions testing MissionCard component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tr>
        <th
          class="mission_name"
        />
        <td
          class="description"
        />
        <td
          class="member-block"
        >
          <span
            class="not-active"
          >
            Not A MEMBER
          </span>
        </td>
        <td
          class="member-join"
        >
          <button
            class="outline-secondary"
            type="button"
          >
            Join Mission
          </button>
        </td>
      </tr>
    </div>
  </body>,
  "container": <div>
    <tr>
      <th
        class="mission_name"
      />
      <td
        class="description"
      />
      <td
        class="member-block"
      >
        <span
          class="not-active"
        >
          Not A MEMBER
        </span>
      </td>
      <td
        class="member-join"
      >
        <button
          class="outline-secondary"
          type="button"
        >
          Join Mission
        </button>
      </td>
    </tr>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
